--- a/environments/staging/my-app/application.yaml
+++ b/environments/staging/my-app/application.yaml
@@ -3,10 +3,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: my-app
-  namespace: argocd
+  namespace: staging
   annotations:
-    argocd-image-updater.argoproj.io/image-list: alexnsa/nginx-lesson158:~v0.1
-    argocd-image-updater.argoproj.io/write-back-method: git
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
