--- a/environments/staging/my-app/1-deployment.yaml
+++ b/environments/staging/my-app/1-deployment.yaml
@@ -21,3 +21,5 @@ spec:
           image: alexnsa/nginx-lesson159-private:v0.1.1
           ports:
             - containerPort: 80
+      imagePullSecrets:
+        - name: regcred2
